Fix slow memory leak in CanvasSurfaceLayerBridge

Graphics layers were not getting unregistered so the layer id of
the CanvasSurfaceLayerBridge's web_layer_ was getting leaked.

BUG=735029

Change-Id: If8ab2badba2fc25243834939e9c95d3c9582c3c0
Reviewed-on: https://chromium-review.googlesource.com/541496
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#480872}
Former-commit-id: 8c3e00e1f56ad32bd881ddda6f412ffa8c0e7a9a